# bare-metal-display

./: .gitignore  CMakeLists.txt  readme.md
bare-metal-display/: BareMetalDisplay.cpp  BareMetalDisplay.h  BaseFont.h  CMakeLists.txt  Color.h  ColorUtil.h  Point.h
bare-metal-display/drivers/: DisplayDriver.h  GC9A01.cpp  GC9A01.h  GC9A01_Driver.cpp  GC9A01_Driver.h
bare-metal-display/fonts/basic-8x8/: Basic8x8.cpp  Basic8x8.h  font8x8_basic.h
bare-metal-display/fonts/dejavu-sans-bold-16/: DejaVuSansBold16.cpp  DejaVuSansBold16.h  deajavu_sans_bold_16_varsize_raw_1bpp.h
bare-metal-display/images/: blade.h  eye.h
example-circles/: CMakeLists.txt  example-circles.cpp
example-fonts/: CMakeLists.txt  example-fonts.cpp
example-images/: CMakeLists.txt  example-images.cpp
example-lines/: CMakeLists.txt  example-lines.cpp
font-util/: config.ini  font2c.py
font-util/template/: fixedsize_raw.tpl  varsize_raw.tpl
image-util/: convert.sh  img2bin.py
